fix post-metadata line-height for mobile wrap scenario

--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -232,6 +232,7 @@ a[href] {
   flex-wrap: wrap;
   gap: .5em;
   list-style: none;
+  line-height: 1;
   padding: 0;
   margin: 0 0 0.5em 0;
   color: var(--text-muted);
